--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "grunt test",
         "build": "grunt build",
-        "start": "nodemon server.js",
+        "start": "node server.js",
+        "dev": "nodemon server.js",
         "all": "npm run build && npm run test"
     },
     "dependencies": {
@@ -25,7 +26,7 @@
         "tv4-formats": "^2.0.0",
         "logger": "^0.0.1",
         "mongo-cursor-pagination": "^7.1.0",
-        "nodemon": "^1.18.7"
+        "nodemon": "^1.18.9"
     },
     "devDependencies": {
         "grunt": "^0.4.5",
