--- a/package.json
+++ b/package.json
@@ -36,22 +36,19 @@
     "devDependencies": {
         "body-parser": "^1.18.3",
         "chai": "^4.2.0",
-        "grunt": "^0.4.5",
-        "grunt-cli": "^0.1.13",
+        "grunt": "^1.0.4",
+        "grunt-cli": "^1.3.2",
         "grunt-config-dir": "^0.3.2",
-        "grunt-contrib-clean": "^0.6.0",
-        "grunt-contrib-less": "^1.4.0",
-        "grunt-copy-browser-modules": "^7.0.1",
-        "grunt-copy-to": "0.0.12",
-        "grunt-curl": "^2.5.0",
+        "grunt-contrib-clean": "^2.0.0",
+        "grunt-copy-to": "^0.0.12",
         "grunt-env": "^0.4.4",
         "grunt-eslint": "^21.0.0",
-        "grunt-express-server": "^0.5.3",
-        "grunt-mocha-cli": "^3.0.0",
+        "grunt-express-server": "^0.5.4",
+        "grunt-mocha-cli": "^4.0.0",
         "grunt-mocha-istanbul": "^5.0.2",
         "grunt-rpm": "^0.1.13",
-        "grunt-shell": "^2.1.0",
-        "grunt-zip": "^0.18.1",
+        "grunt-shell": "^3.0.1",
+        "grunt-zip": "^0.18.2",
         "istanbul": "^0.4.5",
         "jest": "^24.5.0",
         "jest-extended": "^0.11.1",
